--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "hapi": "^17.8.1",
     "node-modules": "^1.0.1",
+    "nodemon": "^1.18.9",
     "pg": "^7.8.0",
     "pg-hstore": "^2.3.2",
     "sequelize": "^4.42.0",
