--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "hapi": "^17.8.1",
+    "joi": "^14.3.1",
     "node-modules": "^1.0.1",
     "nodemon": "^1.18.9",
     "pg": "^7.8.0",
