--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^0.18.0",
     "hapi": "^17.8.1",
     "joi": "^14.3.1",
     "node-modules": "^1.0.1",
